fixes too big image sizes for concept page on big desktops

--- a/app/assets/stylesheets/extern/pages/konzept.css.scss
+++ b/app/assets/stylesheets/extern/pages/konzept.css.scss
@@ -54,3 +54,11 @@ section#content {
 .no-js section#content article section {
   display: block;
 }
+
+// changes for big desktop screens
+@media (min-width: 1200px) {
+  #content article img {
+    width: 80%;
+    margin-left: 10%;
+  }
+}
